--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,11 +1,19 @@
 name: CD - Provision and Deploy
 
 on:
-  push:
+  # THIS IS THE KEY: This workflow is triggered by the completion of another workflow
+  workflow_run:
+    # It watches for the workflow with the name "CI - Build and Push Images"
+    workflows: ["CI - Build and Push Images"]
+    types:
+      - completed # It only runs after the CI workflow is finished
     branches: [ "main" ]
+  
+  workflow_dispatch: {}
 
 env:
-  # The env block now uses secrets for all configuration
+  # We get the commit SHA from the triggering workflow to ensure we use the correct image tag
+  IMAGE_TAG: ${{ github.event.workflow_run.head_sha }}
   REGISTRY: ${{ secrets.ACR_NAME }}.azurecr.io
   BACKEND_IMAGE_NAME: vote-app
   FRONTEND_IMAGE_NAME: frontend-app
@@ -15,53 +23,51 @@ env:
 
 jobs:
   deploy:
-    name: Deploy to AKS
+    name: Provision and Deploy to AKS
+    # CRITICAL: This condition ensures this job only runs if the CI workflow was successful
+    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          # We need to check out the specific commit that triggered the CI run
+          ref: ${{ env.IMAGE_TAG }}
 
       - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Step 1: Provision Infrastructure with OpenTofu
       - name: Setup OpenTofu
         uses: opentofu/setup-opentofu@v1
       
       - name: Tofu Init, Plan and Apply
         working-directory: ./opentofu
-        # This 'env' block passes our GitHub Secrets to OpenTofu
         env:
           TF_VAR_resource_group_name: ${{ secrets.RESOURCE_GROUP }}
           TF_VAR_cluster_name: ${{ secrets.CLUSTER_NAME }}
           TF_VAR_acr_name: ${{ secrets.ACR_NAME }}
         run: |
           tofu init
-          # We no longer need to run import, 'apply' will handle it.
           tofu apply -auto-approve
 
       - name: Set AKS Context
         uses: azure/aks-set-context@v4
         with:
-          # These values now come from the secrets
           resource-group: ${{ secrets.RESOURCE_GROUP }}
           cluster-name: ${{ secrets.CLUSTER_NAME }}
 
-      # (Steps for Helm/Monitoring are unchanged)
-      - name: Install Helm
-        uses: azure/setup-helm@v3
-      - name: Add Helm Repos and Deploy Monitoring Stack
+      # (The rest of the steps are identical to the single-file version)
+      - name: Install Helm & Deploy Monitoring
         run: |
           helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
           helm repo update
           helm upgrade --install prometheus prometheus-community/kube-prometheus-stack --namespace ${{ env.MONITORING_NAMESPACE }} --create-namespace
 
-      # (The rest of the deployment steps are unchanged, as they use the top-level 'env' variables)
-      - name: Deploy Backend App to AKS
+      - name: Deploy Backend App
         run: |
-          sed -i 's|image: .*|image: ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}|g' k8s/deployment.yaml
+          sed -i 's|image: .*|image: ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}:${{ env.IMAGE_TAG }}|g' k8s/deployment.yaml
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
           kubectl apply -f k8s/hpa.yaml
@@ -69,29 +75,22 @@ jobs:
       - name: Wait for Backend External IP
         id: get_backend_ip
         run: |
-          echo "Waiting for backend service to get an external IP..."
           for i in {1..30}; do
             BACKEND_IP=$(kubectl get service vote-app-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}' || echo "")
-            if [[ -n "$BACKEND_IP" ]]; then
-              echo "Backend IP found: $BACKEND_IP"
-              echo "ip=$BACKEND_IP" >> "$GITHUB_OUTPUT"
-              exit 0
-            fi
+            if [[ -n "$BACKEND_IP" ]]; then echo "ip=$BACKEND_IP" >> "$GITHUB_OUTPUT"; exit 0; fi
             sleep 10
           done
-          echo "Error: Timed out waiting for backend service external IP."
           exit 1
       
-      - name: Inject Backend IP and Build/Push Frontend
+      - name: Inject IP, Build, Push & Deploy Frontend
         run: |
           BACKEND_URL="http://${{ steps.get_backend_ip.outputs.ip }}"
           sed -i "s|___BACKEND_API_URL___|$BACKEND_URL|g" frontend/script.js
+          
           docker login ${{ env.REGISTRY }} -u ${{ secrets.ACR_NAME }} -p ${{ secrets.ACR_PASSWORD }}
-          docker build ./frontend -t $REGISTRY/$FRONTEND_IMAGE_NAME:${{ github.sha }}
-          docker push $REGISTRY/$FRONTEND_IMAGE_NAME:${{ github.sha }}
+          docker build ./frontend -t $REGISTRY/$FRONTEND_IMAGE_NAME:${{ env.IMAGE_TAG }}
+          docker push $REGISTRY/$FRONTEND_IMAGE_NAME:${{ env.IMAGE_TAG }}
 
-      - name: Deploy Frontend App to AKS
-        run: |
-          sed -i 's|image: .*|image: ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}|g' k8s/frontend-deployment.yaml
+          sed -i 's|image: .*|image: ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ env.IMAGE_TAG }}|g' k8s/frontend-deployment.yaml
           kubectl apply -f k8s/frontend-deployment.yaml
           kubectl apply -f k8s/frontend-service.yaml
