--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,19 @@
-name: CI - Test, Scan and Build
+name: CI - Build and Push Images
 
 on:
-  pull_request:
+  # This workflow runs on a push to the main branch
+  push:
     branches: [ "main" ]
+  
+  workflow_dispatch: {}
 
 env:
-  REGISTRY: ${{ secrets.ACR_LOGIN_SERVER }}
-  IMAGE_NAME: vote-app
+  REGISTRY: ${{ secrets.ACR_NAME }}.azurecr.io
+  BACKEND_IMAGE_NAME: vote-app
 
 jobs:
-  test-and-scan:
-    name: Test, Scan & Build
+  build_and_push:
+    name: Build, Scan, and Push Backend Image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -24,30 +27,20 @@ jobs:
       - name: Install dependencies
         run: pip install -r app/requirements.txt
       
-      # We would add pytest tests here if we had a tests/ directory
-      # - name: Run tests
-      #   run: pytest
+      # (Future: Add pytest tests here)
 
-      - name: Build Docker image
-        run: docker build ./app -t $REGISTRY/$IMAGE_NAME:${{ github.sha }}
+      - name: Build Backend Docker image
+        run: docker build ./app -t $REGISTRY/$BACKEND_IMAGE_NAME:${{ github.sha }}
 
-      - name: Scan image for vulnerabilities with Trivy
+      - name: Scan Backend Image for Vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '$REGISTRY/$IMAGE_NAME:${{ github.sha }}'
+          image-ref: '$REGISTRY/$BACKEND_IMAGE_NAME:${{ github.sha }}'
           format: 'table'
-          exit-code: '1' # Fail the build if critical vulnerabilities are found
+          exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
-
-  build-and-push:
-    name: Build and Push to ACR
-    runs-on: ubuntu-latest
-    needs: test-and-scan # Run only if the previous job succeeds
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
 
       - name: Azure Login
         uses: azure/login@v2
@@ -55,11 +48,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Docker Login to ACR
-        uses: azure/docker-login@v2
-        with:
-          login-server: ${{ env.REGISTRY }}
-
-      - name: Build and Push image
-        run: |
-          docker build ./app -t $REGISTRY/$IMAGE_NAME:${{ github.sha }}
-          docker push $REGISTRY/$IMAGE_NAME:${{ github.sha }}
+        run: docker login ${{ env.REGISTRY }} -u ${{ secrets.ACR_NAME }} -p ${{ secrets.ACR_PASSWORD }}
+      
+      - name: Push Backend Image to ACR
+        run: docker push $REGISTRY/$BACKEND_IMAGE_NAME:${{ github.sha }}
