--- a/k8s/prometheus-deployment.yml
+++ b/k8s/prometheus-deployment.yml
@@ -49,7 +49,7 @@ kind: Service
 metadata:
   name: prometheus-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 9090
