--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: vote-app-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP 
   ports:
   - port: 80
     targetPort: 8000
