--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:alpine
+
+# First, copy the custom nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Then, copy the static website files
 COPY . /usr/share/nginx/html
-EXPOSE 80
