--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,10 @@ on:
     branches: [ "main" ]
   workflow_dispatch: {}
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   IMAGE_TAG: ${{ github.event.workflow_run.head_sha }}
   REGISTRY: ${{ secrets.ACR_NAME }}.azurecr.io
@@ -26,10 +30,12 @@ jobs:
         with:
           ref: ${{ env.IMAGE_TAG }}
 
-      - name: Azure Login
+      - name: Azure Login (OIDC)
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Set AKS Context
         uses: azure/aks-set-context@v4
