--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,10 +7,6 @@ on:
     branches: [ "main" ]
   workflow_dispatch: {}
 
-permissions:
-  id-token: write
-  contents: read
-
 env:
   IMAGE_TAG: ${{ github.event.workflow_run.head_sha }}
   REGISTRY: ${{ secrets.ACR_NAME }}.azurecr.io
@@ -30,12 +26,10 @@ jobs:
         with:
           ref: ${{ env.IMAGE_TAG }}
 
-      - name: Azure Login (OIDC)
+      - name: Azure Login
         uses: azure/login@v2
         with:
-          client-id: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}
-          tenant-id: ${{ fromJson(secrets.AZURE_CREDENTIALS).tenantId }}
-          subscription-id: ${{ fromJson(secrets.AZURE_CREDENTIALS).subscriptionId }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Set AKS Context
         uses: azure/aks-set-context@v4
