--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,21 +2,21 @@ server {
     listen 80;
     server_name localhost;
 
-    # This is the root for your HTML/CSS/JS files
     root /usr/share/nginx/html;
     index index.html;
 
-    # This rule handles requests for the main page
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # THIS IS THE KEY: This rule handles all API requests
+    # --- THIS IS THE FIX ---
+    # The trailing slash on /api/ and on the proxy_pass URL is critical.
+    # It tells Nginx to replace "/api/" with "/" when forwarding.
+    # So, a request for "/api/results" becomes a request for "/results".
     location /api/ {
-        # Forward the request to the backend service's internal DNS name
-        proxy_pass http://vote-app-service; 
+        proxy_pass http://vote-app-service/; 
+    # --- END OF FIX ---
 
-        # These headers are important for passing client info to the backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
