--- a/k8s/grafana-deployment.yml
+++ b/k8s/grafana-deployment.yml
@@ -12,11 +12,25 @@ spec:
       labels:
         app: grafana
     spec:
+      volumes:
+        - name: grafana-provisioning
+          configMap:
+            name: grafana-datasources
+        - name: grafana-dashboards
+          emptyDir: {}
       containers:
         - name: grafana
           image: grafana/grafana-oss:9.5.3
           ports:
             - containerPort: 3000
+          env:
+            - name: GF_PATHS_PROVISIONING
+              value: /etc/grafana/provisioning
+          volumeMounts:
+            - name: grafana-provisioning
+              mountPath: /etc/grafana/provisioning/datasources
+            - name: grafana-dashboards
+              mountPath: /var/lib/grafana/dashboards
 ---
 apiVersion: v1
 kind: Service
@@ -29,3 +43,19 @@ spec:
       targetPort: 3000
   selector:
     app: grafana
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-datasources
+data:
+  prometheus.yaml: |
+    apiVersion: 1
+    datasources:
+      - name: Prometheus
+        type: prometheus
+        access: proxy
+        url: http://prometheus-service:80
+        isDefault: true
+        jsonData:
+          timeInterval: 15s
