--- a/k8s/grafana-deployment.yml
+++ b/k8s/grafana-deployment.yml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-datasources
+data:
+  prometheus.yaml: |
+    apiVersion: 1
+    datasources:
+    - name: Prometheus
+      type: prometheus
+      access: proxy
+      url: http://prometheus-service:80 # Points to our internal Prometheus service
+      isDefault: true
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,13 +31,20 @@ spec:
           image: grafana/grafana-oss:9.5.3
           ports:
             - containerPort: 3000
+          volumeMounts:
+            - name: grafana-datasources-volume
+              mountPath: /etc/grafana/provisioning/datasources
+      volumes:
+        - name: grafana-datasources-volume
+          configMap:
+            name: grafana-datasources
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: grafana-service
 spec:
-  type: LoadBalancer
+  type: LoadBalancer # Keep this as LoadBalancer for public access
   ports:
     - port: 80
       targetPort: 3000
