--- a/k8s/hpa.yml
+++ b/k8s/hpa.yml
@@ -15,4 +15,4 @@ spec:
       name: cpu
       target:
         type: Utilization
-        averageUtilization: 50 # Scale up when CPU usage > 50%
+        averageUtilization: 50 
