--- a/k8s/database-deployment.yml
+++ b/k8s/database-deployment.yml
@@ -1,16 +1,14 @@
-# 1. Persistent Volume Claim: The persistent disk for our data
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
 spec:
   accessModes:
-    - ReadWriteOnce # This volume can be mounted by one node at a time
+    - ReadWriteOnce 
   resources:
     requests:
-      storage: 1Gi # Request 1 Gigabyte of storage
+      storage: 1Gi 
 ---
-# 2. Deployment: The pod that runs the PostgreSQL container
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,11 +23,6 @@ spec:
       labels:
         app: postgres
     spec:
-      # --- FIX: ADD INIT CONTAINER ---
-      # This container runs before the main postgres container.
-      # It uses a lightweight 'busybox' image to run a single command.
-      # Its purpose is to fix the folder permissions on the persistent volume
-      # so that the PostgreSQL process can write to it.
       initContainers:
       - name: fix-permissions
         image: busybox
@@ -37,7 +30,6 @@ spec:
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
-      # --- END OF FIX ---
       containers:
         - name: postgres
           image: postgres:15-alpine
@@ -51,9 +43,8 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-secret # Reference the secret we created
+                  name: postgres-secret 
                   key: POSTGRES_PASSWORD
-            # This is important for telling postgres where to store its data.
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
           volumeMounts:
@@ -62,15 +53,14 @@ spec:
       volumes:
         - name: postgres-storage
           persistentVolumeClaim:
-            claimName: postgres-pvc # Attach the persistent volume claim
+            claimName: postgres-pvc 
 ---
-# 3. Service: The internal DNS name for the database
 apiVersion: v1
 kind: Service
 metadata:
   name: postgres-service
 spec:
-  type: ClusterIP # Only reachable inside the cluster
+  type: ClusterIP 
   ports:
     - port: 5432
   selector:
